package app.persistence;

public class MaterialMapper {

}

